Changes to be committed:     modified:   README.md 	modified:   pyproject.toml 	renamed:    architecture.png -> sample_image.png 	renamed:    handoffOrchestration_uploadFile.py -> semantic_kernel_upload_file.py

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "sk-handofforchestration"
+name = "semantic-kernel-upload-file"
 version = "0.1.0"
 description = "Semantic Kernel Agent Handoff Orchestration with Image Analysis"
 authors = [
